# Code

./: CMakeLists.txt  activation_function_layer.cpp  activation_function_layer.h  algos_graphe.cpp  algos_graphe.h  algos_heuristiques.h  algos_placement.h  arete.cpp  arete.h  build.code-workspace  cellule.cpp  cellule.h  display_openGL.cpp  display_openGL.h  edge_mcts.cpp  edge_mcts.h  emplacement.cpp  emplacement.h  fully_connected_layer.cpp  fully_connected_layer.h  game.cpp  game.h  game_state.cpp  game_state.h  geometrie.cpp  geometrie.h  glouton_meilleur_deplacement.cpp  glouton_meilleur_deplacement.h  graphe.cpp  graphe.h  graphe_template.cpp  grille.cpp  grille.h  intersection.cpp  intersection.h  json_test.json  layer.cpp  layer.h  main.cpp  manipulateur_json.cpp  (+71 more)
common/: controls.cpp
